[gd_scene format=3 uid="uid://dovjv67r8i5dv"]

[ext_resource type="Script" uid="uid://cspfn1x5m8y8" path="res://Scripts/Menu/death_screen.gd" id="1_death"]
[ext_resource type="FontFile" uid="uid://cxqub0sfewm4v" path="res://addons/font_auto_size_labels/demo/Anta-Regular.ttf" id="2_font"]
[ext_resource type="Script" path="res://Scripts/UI/skip_circle_drawer.gd" id="3_skip_circle"]

[sub_resource type="LabelSettings" id="LabelSettings_count"]
font = ExtResource("2_font")
font_size = 96

[sub_resource type="LabelSettings" id="LabelSettings_increment"]
font = ExtResource("2_font")
font_size = 48
font_color = Color(0.4, 0.7, 1, 0.9)

[sub_resource type="LabelSettings" id="LabelSettings_lived"]
font = ExtResource("2_font")
font_size = 24
font_color = Color(0.6, 0.6, 0.65, 1)

[sub_resource type="LabelSettings" id="LabelSettings_newchief"]
font = ExtResource("2_font")
font_color = Color(0.5, 0.5, 0.55, 1)

[sub_resource type="LabelSettings" id="LabelSettings_chief"]
font = ExtResource("2_font")
font_size = 32
font_color = Color(0.3, 0.75, 0.95, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hint"]
font = ExtResource("2_font")
font_size = 14
font_color = Color(0.5, 0.5, 0.55, 0.7)

[sub_resource type="LabelSettings" id="LabelSettings_reset"]
font = ExtResource("2_font")
font_size = 20
font_color = Color(0.85, 0.85, 0.9, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.12, 0.12, 0.15, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 30.0
content_margin_top = 25.0
content_margin_right = 30.0
content_margin_bottom = 25.0

[node name="DeathScreen" type="Control" unique_id=1986564461]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_death")

[node name="Background" type="ColorRect" parent="." unique_id=982712886]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.07, 0.96)

[node name="ContentContainer" type="VBoxContainer" parent="." unique_id=377867166]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="DaysCountContainer" type="Control" parent="ContentContainer" unique_id=1124114322]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="DaysCountLabel" type="Label" parent="ContentContainer/DaysCountContainer" unique_id=558851078]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_count")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DaysIncrementLabel" type="Label" parent="ContentContainer/DaysCountContainer" unique_id=1706047083]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -30.0
offset_right = 19.99997
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
text = "+30"
label_settings = SubResource("LabelSettings_increment")
vertical_alignment = 1

[node name="DaysLivedLabel" type="Label" parent="ContentContainer" unique_id=796520950]
layout_mode = 2
text = "DAYS LIVED"
label_settings = SubResource("LabelSettings_lived")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="ContentContainer" unique_id=441928199]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ChiefContainer" type="VBoxContainer" parent="ContentContainer" unique_id=2013198151]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 4
alignment = 1

[node name="NewChiefTitle" type="Label" parent="ContentContainer/ChiefContainer" unique_id=357773054]
layout_mode = 2
text = "NEW CHIEF"
label_settings = SubResource("LabelSettings_newchief")
horizontal_alignment = 1

[node name="ChiefNameLabel" type="Label" parent="ContentContainer/ChiefContainer" unique_id=578407323]
layout_mode = 2
text = "Chief Name"
label_settings = SubResource("LabelSettings_chief")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="ContentContainer" unique_id=1409289457]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="QuestContainer" type="VBoxContainer" parent="ContentContainer" unique_id=1479677143]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1

[node name="ContinueButton" type="Button" parent="." unique_id=260509436]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_colors/font_pressed_color = Color(0.5, 0.5, 0.55, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Continue"
flat = true

[node name="TapHint" type="Label" parent="." unique_id=2100633739]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
text = "Tap to skip"
label_settings = SubResource("LabelSettings_hint")
horizontal_alignment = 1

[node name="EndingSkipContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="EndingSkipHint" type="Label" parent="EndingSkipContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
text = "Hold 3 seconds to skip"
label_settings = SubResource("LabelSettings_hint")
horizontal_alignment = 2
vertical_alignment = 1

[node name="EndingSkipCircle" type="Control" parent="EndingSkipContainer"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -18.0
offset_right = 0.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_skip_circle")

[node name="ResetPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -60.0
offset_right = 140.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="VBoxContainer" type="VBoxContainer" parent="ResetPopup"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ResetLabel" type="Label" parent="ResetPopup/VBoxContainer"]
layout_mode = 2
text = "Game save will be reset"
label_settings = SubResource("LabelSettings_reset")
horizontal_alignment = 1

[node name="ResetOKButton" type="Button" parent="ResetPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(100, 36)
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_colors/font_pressed_color = Color(0.5, 0.5, 0.55, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "OK"
flat = true
